정산 데이터 덮어쓰기 전략을, 삭제 후 재생성에서, 수정으로 변경